<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        style="@style/DefaultViewMarginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_username"/>

    <EditText
        android:id="@+id/etUsername"
        style="@style/DefaultViewMarginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnUp"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDown"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUp" />

        <Button
            android:id="@+id/btnLeft"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            app:layout_constraintEnd_toStartOf="@id/btnDown"
            app:layout_constraintTop_toBottomOf="@id/btnUp" />

        <Button
            android:id="@+id/btnRight"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            app:layout_constraintStart_toEndOf="@id/btnDown"
            app:layout_constraintTop_toBottomOf="@id/btnUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        style="@style/DefaultViewMarginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_message"/>

    <EditText
        android:id="@+id/etMessage"
        style="@style/DefaultViewMarginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSend"
            style="@style/DefaultViewMarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvResponse"
        style="@style/DefaultViewMarginStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>